--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                 
             }
             .displayimg{
-                height: 20rem;
+                height: 19rem;
                 width:auto;
                 display: block;
                 margin: auto;
@@ -22,6 +22,19 @@
                 <a class="navbar-brand" href="#">Fixed top</a>
             </nav>
         </div>
+        <div class="row justify-content-center">
+            <div class="col-6">
+                <p style="text-align:center; font-size:2.1rem; font-weight:bold;">
+                    Quienes somos
+                </p>
+                <p style="text-align:center;">
+                    <span class="d-inline-block" id="popover1" tabindex="0" data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-content="Texto de ejemplo 1">Texto de ejemplo texto de ejemplo</span> 
+                    <span class="d-inline-block" id="popover2" tabindex="0" data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-content="Texto de ejemplo 2">Texto de ejemplo texto de ejemplo</span> 
+                    <span class="d-inline-block" id="popover3" tabindex="0" data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-content="Texto de ejemplo 3">Texto de ejemplo texto de ejemplo</span> 
+                </p>
+            </div>
+        </div>
+        <div class="row" style="background-color: white;"><div class="col-12" style="color: white;">.</div></div>
         <div class="row">
             <div class="col-5 offset-1">
                 <p style="text-align: center; font-size:2rem; font-weight: bold; padding:40px 0;">
@@ -37,7 +50,8 @@
                 <img class="displayimg center" src="mision.webp">
             </div>
         </div>
-        <p style="color:white;">.</p>
+        <div class="row" style="background-color: white;"><div class="col-12" style="color: white;">.</div></div>
+        <div class="row" style="background-color: blue;"><div class="col-12" style="color: blue;">.</div></div>
         <div class="row" style="background-color: blue;">
             <div class="col-md-5 offset-md-1">
                 <img class="displayimg center" src="vision.jpeg">
@@ -53,7 +67,7 @@
                 </p>
             </div>
         </div>
-        <pdiv class="row" style="background-color: blue;"><div class="col-12" style="color: blue;">.</div></div>
+        <div class="row" style="background-color: blue;"><div class="col-12" style="color: blue;">.</div></div>
         <p>-</p>
         <p>-</p>
         <p>-</p>
@@ -85,7 +99,15 @@
         <p>-</p>
         <p>-</p>
         
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+        <script>
+            const El = document.getElementById('popover1');
+            const popover1 = new bootstrap.Popover(El);
+            const E2 = document.getElementById('popover2');
+            const popover2 = new bootstrap.Popover(E2);
+            const E3 = document.getElementById('popover3');
+            const popover3 = new bootstrap.Popover(E3);
+        </script>
     </body>
 </html>
